--- a/index.html
+++ b/index.html
@@ -1,10 +1,45 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hello</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="viewport" content="width = device-width, initial-scale =
+    1.0, maximum-scale = 1.0, minimum-scale = 1.0, user-scalable = 0,
+    minimal-ui" />
+  <style type="text/css">
+    body {
+      padding: 0px;
+      margin: 0px;
+    }
+
+    canvas {
+      display: block;
+      margin: 0;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  </style>
+    <title>bug invaders</title>
+    <!-- vscode://vscode.github-authentication/did-authenticate?windowId=3&code=192260625ab2866131b4&state=a13506bd-3846-40c3-8bc2-a3512c0161ce -->
 </head>
 <body>
-    
+    <script src="//cdn.jsdelivr.net/npm/phaser@3.23.0/dist/phaser.min.js"></script>
+    <!-- <script src="StartScene.js"></script>
+    <script src="GameScene.js"></script>
+    <script  src="Player.js"></script> -->
+    <!-- <script type="module" src="Bug.js"></script>
+    <script type="module" src="Player.js"></script>
+    <script type="module" src="src/SceneKey.js"></script>
+    <script type="module" src="src/Scenes/GameScene.js"></script>
+    <script type ="module" src="src/Scenes/StartScene.js"></script> -->
+    <script src="StartScene.js"></script>
+    <script src="GameScene.js"></script>
+    <script src="YellowBugScene.js"></script>
+    <script src="Score.js"></script>
+    <script src="EndScene.js"></script>
+    <script src="Player.js"></script>
+    <script src="Config.js"></script>
 </body>
 </html>
